--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,5 @@
   "semi": false,
   "tabWidth": 2,
   "printWidth": 120,
-  "plugins": ["prettier-plugin-tailwindcss"],
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
