--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "flowbite": "^2.3.0",
-    "flowbite-react": "^0.7.2",
+    "@material-tailwind/react": "^2.1.9",
+    "@tanstack/react-query": "^5.28.4",
+    "@tanstack/react-query-devtools": "^5.28.4",
+    "axios": "^1.6.8",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -19,8 +21,8 @@
   "devDependencies": {
     "@types/navermaps": "^3.7.4",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "18.2.19",
+    "@types/react-dom": "18.2.19",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
