--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint —fix \"src/**/*.{js,jsx,ts,tsx}\""
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
